# snap-extension-mongodb

./: .ghci  README.md  snap-extension-mongodb.cabal
src/Snap/Extension/: MongoDB.hs
src/Snap/Extension/DB/: MongoDB.hs
src/Snap/Extension/DB/MongoDB/: Generics.hs  Instances.hs  Utils.hs
src/Snap/Extension/MongoDB/: MongoDB.hs
