Name:                snap-extension-mongodb
Version:             0.2.1.0
Synopsis:            MongoDB extension for Snap Framework
Homepage:            https://github.com/ozataman/snap-extension-mongodb
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.2


Library
  hs-source-dirs: src
  
  Exposed-modules:
      Snap.Extension.MongoDB
  
  Build-depends:       
      base >= 4 && < 5
    , bytestring >= 0.9
    , compact-string-fix >= 0.3.1 && < 0.4
    , containers >= 0.3 && < 0.4
    , mongoDB >= 0.9 && < 0.10
    , mtl >= 2 && < 3
    , snap >= 0.3 && < 0.4
    , snap-core >= 0.3 && < 0.4
  
  extensions: 
      OverloadedStrings
    , FlexibleInstances
