Name:                snap-extension-mongodb
Version:             0.3.3.0
Synopsis:            MongoDB extension for Snap Framework
Homepage:            https://github.com/ozataman/snap-extension-mongodb
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.2


Library
  hs-source-dirs: src
  
  Exposed-modules:
      Snap.Extension.DB.MongoDB
    , Snap.Extension.DB.MongoDB.Generics

  Other-modules:
      Snap.Extension.DB.MongoDB.Instances
    , Snap.Extension.DB.MongoDB.Utils
  
  Build-depends:       
      base >= 4 && < 5
    , bytestring >= 0.9
    , bson
    , compact-string-fix >= 0.3.1 && < 0.4
    , containers >= 0.3 
    , mongoDB == 0.9.5
    , mtl >= 2 && < 3
    , regular >= 0.3.2
    , safe
    , snap >= 0.4 && < 0.5
    , snap-core >= 0.4 && < 0.5
    , snap-auth >= 0.1
    , text >= 0.11
    , time

  extensions: 
      OverloadedStrings
    , FlexibleInstances
    , TypeSynonymInstances
    , MultiParamTypeClasses
